# pypilot-event-loop

./: CMakeLists.txt  README.md  library.properties
.github/workflows/: async-event-rename-once.yml  ci.yml  merge-scheduler-headers-once.yml
examples/EventLoopTimerExample/: EventLoopTimerExample.cpp  EventLoopTimerExample.ino
examples/FixedHeaderProtocolExample/: FixedHeaderProtocolExample.cpp  FixedHeaderProtocolExample.ino
examples/IntegratedEventLoopExample/: IntegratedEventLoopExample.cpp  IntegratedEventLoopExample.ino
examples/JsonProtocolExample/: JsonProtocolExample.cpp  JsonProtocolExample.ino
examples/LineProtocolExample/: LineProtocolExample.cpp  LineProtocolExample.ino
examples/LinuxFifoIpcExample/: LinuxFifoIpcExample.cpp  LinuxFifoIpcExample.ino
examples/LinuxPortable/: EventLoopTimerExample.cpp  FixedHeaderProtocolExample.cpp  IntegratedEventLoopExample.cpp  LineProtocolExample.cpp  PinEventExample.cpp  PinIoExample.cpp  SerialLineProtocolExample.cpp  TcpLineClientExample.cpp  UdpBroadcastSenderExample.cpp  UdpReceiverExample.cpp
examples/MiniSignalKServerExample/: MiniSignalKServerExample.cpp  MiniSignalKServerExample.ino
examples/PinEventExample/: PinEventExample.cpp  PinEventExample.ino
examples/PinIoExample/: PinIoExample.cpp  PinIoExample.ino
examples/SerialLineProtocolExample/: SerialLineProtocolExample.cpp  SerialLineProtocolExample.ino
examples/TcpDisconnectServerExample/: TcpDisconnectServerExample.cpp  TcpDisconnectServerExample.ino
examples/TcpFixedHeaderServerExample/: TcpFixedHeaderServerExample.cpp  TcpFixedHeaderServerExample.ino
examples/TcpLineClientExample/: TcpLineClientExample.cpp  TcpLineClientExample.ino
examples/TcpLineServerExample/: TcpLineServerExample.cpp  TcpLineServerExample.ino
examples/UdpBroadcastSenderExample/: UdpBroadcastSenderExample.cpp  UdpBroadcastSenderExample.ino
examples/UdpReceiverExample/: UdpReceiverExample.cpp  UdpReceiverExample.ino
examples/arduino/DatagramStreamExample/: DatagramStreamExample.ino
examples/arduino/EventLoopSmoke/: EventLoopSmoke.ino
examples/arduino/InterruptPinEventExample/: InterruptPinEventExample.ino
examples/arduino/PinEventExample/: PinEventExample.ino
examples/arduino/SerialByteStreamEcho/: SerialByteStreamEcho.ino
examples/linux/: byte_stream_pipe.cpp  datagram_socketpair.cpp  fifo_line_reader.cpp  fixed_frame_pipe.cpp  gpiod_pin_event.cpp  libevent_loop_smoke.cpp  line_protocol_pipe.cpp
examples/support/: example_byte_stream.hpp  example_pin_event_source.hpp  mini_signalk_support.hpp
src/: async_event_loop.hpp  pypilot_event_loop.hpp
src/async_event_loop/: application.hpp  byte_stream.hpp  callback_task.hpp  clock.hpp  datagram_stream.hpp  event_handle.hpp  event_loop.hpp  native.hpp  pin_event.hpp  pin_io.hpp  protocol_reader.hpp  scheduler.hpp  status.hpp  task.hpp  tcp.hpp  tcp_backpressure.hpp  tcp_connection_registry.hpp  tcp_line_protocol.hpp  timer.hpp  udp.hpp
src/async_event_loop_arduino/: arduino_clock.hpp  arduino_loop.hpp  arduino_serial_stream.hpp  arduino_wifi_tcp.hpp  arduino_wifi_udp.hpp
src/async_event_loop_linux/: libevent_loop.hpp  linux_fd_stream.hpp  linux_fifo_byte_stream.hpp  linux_gpiod_pin_event_source.hpp  linux_serial_stream.hpp  linux_tcp_client.hpp  linux_udp_datagram_stream.hpp  monotonic_clock.hpp
src/pypilot_event_loop/: application.hpp  byte_stream.hpp  callback_task.hpp  clock.hpp  datagram_stream.hpp  event.hpp  event_handle.hpp  event_queue.hpp  example_main.hpp  fixed_vector.hpp  micros32_extender.hpp  native.hpp  native_pin_io.hpp  native_stream.hpp  native_tcp.hpp  native_udp.hpp  pin_event.hpp  pin_io.hpp  protocol_reader.hpp  scheduler.hpp  spsc_event_queue.hpp  static_byte_stream.hpp  static_datagram_stream.hpp  static_pin_event_source.hpp  status.hpp  task.hpp  tcp.hpp  timer.hpp  udp.hpp
src/pypilot_event_loop_arduino/: arduino_clock.hpp  arduino_digital_pin.hpp  arduino_interrupt_guard.hpp  arduino_interrupt_pin_event_source.hpp  arduino_loop.hpp  arduino_pin_event_source.hpp  arduino_pin_io.hpp  arduino_serial_stream.hpp  arduino_wifi_tcp.hpp  arduino_wifi_udp.hpp
src/pypilot_event_loop_linux/: libevent_loop.hpp  linux_fd_datagram_stream.hpp  linux_fd_stream.hpp  linux_fifo_byte_stream.hpp  linux_file_pin_io.hpp  linux_gpiod_pin_event_source.hpp  linux_gpiod_pin_io.hpp  linux_serial_stream.hpp  linux_sysfs_pin_event_source.hpp  linux_tcp_client.hpp  linux_tcp_server.hpp  linux_udp_datagram_stream.hpp  monotonic_clock.hpp
src/pypilot_event_loop_test/: memory_stream.hpp  test_clock.hpp  test_scheduler.hpp
tests/: test_bytes_ready_callback.cpp  test_callback_storage_alignment.cpp  test_callback_task.cpp  test_event_loop_custom_callback_capacity.cpp  test_event_loop_default_overrides.cpp  test_event_loop_remove_inside_callback.cpp  test_event_loop_remove_reuses_slot.cpp  test_event_queue.cpp  test_libevent_periodic_timer_drift.cpp  test_linux_fifo_stream.cpp  test_linux_gpiod_pin_event_compile.cpp  test_linux_gpiod_pin_io_compile.cpp  test_linux_libevent_loop.cpp  test_memory_stream.cpp  test_micros32_extender.cpp  test_pin_event_task.cpp  test_protocol_readers.cpp  test_readable_callback.cpp  test_spsc_event_queue.cpp  test_tcp_client_disconnect.cpp  test_tcp_close_closes_clients.cpp  test_tcp_connection_registry.cpp  test_tcp_disconnect_detection.cpp  test_tcp_fixed_header_server.cpp  test_tcp_line_server.cpp  test_tcp_listener_lifecycle.cpp  test_tcp_nmea_signalk_backpressure.cpp  test_tcp_output_buffer.cpp  test_tcp_server_shutdown.cpp  test_tcp_timeout_watermark.cpp  test_test_scheduler.cpp  test_timer.cpp  test_udp_peer.cpp
tests/support/: memory_stream.hpp  nmea_mwv_support.hpp  test_clock.hpp  test_scheduler.hpp
