cmake_minimum_required(VERSION 3.16)
project(pypilot_event_loop LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(PkgConfig REQUIRED)
pkg_check_modules(LIBEVENT REQUIRED libevent)
pkg_check_modules(LIBGPIOD libgpiod)

add_library(pypilot_event_loop INTERFACE)
target_include_directories(pypilot_event_loop INTERFACE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${LIBEVENT_INCLUDE_DIRS}
)
target_link_directories(pypilot_event_loop INTERFACE ${LIBEVENT_LIBRARY_DIRS})
target_link_libraries(pypilot_event_loop INTERFACE ${LIBEVENT_LIBRARIES})
target_compile_options(pypilot_event_loop INTERFACE ${LIBEVENT_CFLAGS_OTHER})

if(LIBGPIOD_FOUND)
    target_include_directories(pypilot_event_loop INTERFACE ${LIBGPIOD_INCLUDE_DIRS})
    target_link_directories(pypilot_event_loop INTERFACE ${LIBGPIOD_LIBRARY_DIRS})
    target_link_libraries(pypilot_event_loop INTERFACE ${LIBGPIOD_LIBRARIES})
    target_compile_options(pypilot_event_loop INTERFACE ${LIBGPIOD_CFLAGS_OTHER})
endif()

function(add_linux_example target source)
    add_executable(${target} ${source})
    target_link_libraries(${target} PRIVATE pypilot_event_loop)
endfunction()

add_executable(test_timer tests/test_timer.cpp)
target_link_libraries(test_timer PRIVATE pypilot_event_loop)

add_executable(test_test_scheduler tests/test_test_scheduler.cpp)
target_link_libraries(test_test_scheduler PRIVATE pypilot_event_loop)

add_executable(test_memory_stream tests/test_memory_stream.cpp)
target_link_libraries(test_memory_stream PRIVATE pypilot_event_loop)

add_executable(test_callback_task tests/test_callback_task.cpp)
target_link_libraries(test_callback_task PRIVATE pypilot_event_loop)

add_executable(test_bytes_ready_callback tests/test_bytes_ready_callback.cpp)
target_link_libraries(test_bytes_ready_callback PRIVATE pypilot_event_loop)

add_executable(test_event_loop_remove_reuses_slot tests/test_event_loop_remove_reuses_slot.cpp)
target_link_libraries(test_event_loop_remove_reuses_slot PRIVATE pypilot_event_loop)

add_executable(test_event_loop_remove_inside_callback tests/test_event_loop_remove_inside_callback.cpp)
target_link_libraries(test_event_loop_remove_inside_callback PRIVATE pypilot_event_loop)

add_executable(test_protocol_readers tests/test_protocol_readers.cpp)
target_link_libraries(test_protocol_readers PRIVATE pypilot_event_loop)

add_executable(test_linux_fifo_stream tests/test_linux_fifo_stream.cpp)
target_link_libraries(test_linux_fifo_stream PRIVATE pypilot_event_loop)

add_executable(test_linux_libevent_loop tests/test_linux_libevent_loop.cpp)
target_link_libraries(test_linux_libevent_loop PRIVATE pypilot_event_loop)

add_executable(test_tcp_line_server tests/test_tcp_line_server.cpp)
target_link_libraries(test_tcp_line_server PRIVATE pypilot_event_loop)

add_executable(test_tcp_fixed_header_server tests/test_tcp_fixed_header_server.cpp)
target_link_libraries(test_tcp_fixed_header_server PRIVATE pypilot_event_loop)

add_executable(test_tcp_server_shutdown tests/test_tcp_server_shutdown.cpp)
target_link_libraries(test_tcp_server_shutdown PRIVATE pypilot_event_loop)

add_executable(test_tcp_disconnect_detection tests/test_tcp_disconnect_detection.cpp)
target_link_libraries(test_tcp_disconnect_detection PRIVATE pypilot_event_loop)

add_executable(test_tcp_client_disconnect tests/test_tcp_client_disconnect.cpp)
target_link_libraries(test_tcp_client_disconnect PRIVATE pypilot_event_loop)

add_executable(test_tcp_listener_lifecycle tests/test_tcp_listener_lifecycle.cpp)
target_link_libraries(test_tcp_listener_lifecycle PRIVATE pypilot_event_loop)

add_executable(test_tcp_close_closes_clients tests/test_tcp_close_closes_clients.cpp)
target_link_libraries(test_tcp_close_closes_clients PRIVATE pypilot_event_loop)

if(LIBGPIOD_FOUND)
    add_executable(test_linux_gpiod_pin_io_compile tests/test_linux_gpiod_pin_io_compile.cpp)
    target_link_libraries(test_linux_gpiod_pin_io_compile PRIVATE pypilot_event_loop)
endif()

add_linux_example(event_loop_timer_example examples/LinuxPortable/EventLoopTimerExample.cpp)
add_linux_example(line_protocol_example examples/LinuxPortable/LineProtocolExample.cpp)
add_linux_example(fixed_header_protocol_example examples/LinuxPortable/FixedHeaderProtocolExample.cpp)
add_linux_example(serial_line_protocol_example examples/LinuxPortable/SerialLineProtocolExample.cpp)
add_linux_example(tcp_line_client_example examples/LinuxPortable/TcpLineClientExample.cpp)
add_linux_example(udp_broadcast_sender_example examples/LinuxPortable/UdpBroadcastSenderExample.cpp)
add_linux_example(udp_receiver_example examples/LinuxPortable/UdpReceiverExample.cpp)
add_linux_example(pin_io_example examples/LinuxPortable/PinIoExample.cpp)
add_linux_example(integrated_event_loop_example examples/LinuxPortable/IntegratedEventLoopExample.cpp)
add_linux_example(pin_event_example examples/LinuxPortable/PinEventExample.cpp)

add_executable(tcp_line_server_example examples/TcpLineServerExample/TcpLineServerExample.cpp)
target_link_libraries(tcp_line_server_example PRIVATE pypilot_event_loop)

add_executable(tcp_fixed_header_server_example examples/TcpFixedHeaderServerExample/TcpFixedHeaderServerExample.cpp)
target_link_libraries(tcp_fixed_header_server_example PRIVATE pypilot_event_loop)

add_executable(tcp_disconnect_server_example examples/TcpDisconnectServerExample/TcpDisconnectServerExample.cpp)
target_link_libraries(tcp_disconnect_server_example PRIVATE pypilot_event_loop)

add_executable(linux_fifo_ipc_example examples/LinuxFifoIpcExample/LinuxFifoIpcExample.cpp)
target_link_libraries(linux_fifo_ipc_example PRIVATE pypilot_event_loop)

enable_testing()
add_test(NAME test_timer COMMAND test_timer)
add_test(NAME test_test_scheduler COMMAND test_test_scheduler)
add_test(NAME test_memory_stream COMMAND test_memory_stream)
add_test(NAME test_callback_task COMMAND test_callback_task)
add_test(NAME test_bytes_ready_callback COMMAND test_bytes_ready_callback)
add_test(NAME test_event_loop_remove_reuses_slot COMMAND test_event_loop_remove_reuses_slot)
add_test(NAME test_event_loop_remove_inside_callback COMMAND test_event_loop_remove_inside_callback)
add_test(NAME test_protocol_readers COMMAND test_protocol_readers)
add_test(NAME test_linux_fifo_stream COMMAND test_linux_fifo_stream)
add_test(NAME test_linux_libevent_loop COMMAND test_linux_libevent_loop)
add_test(NAME test_tcp_line_server COMMAND test_tcp_line_server)
add_test(NAME test_tcp_fixed_header_server COMMAND test_tcp_fixed_header_server)
add_test(NAME test_tcp_server_shutdown COMMAND test_tcp_server_shutdown)
add_test(NAME test_tcp_disconnect_detection COMMAND test_tcp_disconnect_detection)
add_test(NAME test_tcp_client_disconnect COMMAND test_tcp_client_disconnect)
add_test(NAME test_tcp_listener_lifecycle COMMAND test_tcp_listener_lifecycle)
add_test(NAME test_tcp_close_closes_clients COMMAND test_tcp_close_closes_clients)
if(LIBGPIOD_FOUND)
    add_test(NAME test_linux_gpiod_pin_io_compile COMMAND test_linux_gpiod_pin_io_compile)
endif()
